Auto stash before merge of "master" and "upstream/lloretLogicBranch"

--- a/ISFproject/EdualityProject/.classpath
+++ b/ISFproject/EdualityProject/.classpath
@@ -7,5 +7,29 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Program Files/MySQL/mysql-connector-java-8.0.20/mysql-connector-java-8.0.20.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/aopalliance-repackaged-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/asm-debug-all-5.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/hk2-api-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/hk2-locator-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/hk2-utils-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/javax.inject-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-client.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-common.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-core-1.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-guava-2.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-media-multipart-2.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/jersey-server.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/mimepull.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/org.osgi.core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Antonio Canales/Documents/jerseyjars/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
