--- a/eduality/src/main/resources/application.properties
+++ b/eduality/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:h2:file:~/eduality;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=FALSE;DB_CLOSE_DELAY=-1;
+spring.datasource.url=jdbc:h2:file:~/eduality
 spring.datasource.platform = h2
 spring.datasource.username = sa
 spring.datasource.password = 
 spring.datasource.driverClassName = org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
