--- a/eduality/pom.xml
+++ b/eduality/pom.xml
@@ -49,6 +49,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+  			 <groupId>javax.validation</groupId>
+ 			 <artifactId>validation-api</artifactId>
+ 			 <version>1.0.0.GA</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
