--- a/edualitytest/pom.xml
+++ b/edualitytest/pom.xml
@@ -49,6 +49,13 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-core</artifactId>
 		</dependency>
+	
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.h2database</groupId>
